8/22/2005
	- Add Address.getByAddress(String) and
	  Address.getByAddress(String, family).

7/21/2005
	- Zone.findExactMatch() would throw a NullPointerException if the
	  name didn't exist.
	  (reported by Hans Zandbelt <Hans.Zandbelt@telin.nl>)

7/19/2005
	- Add support for binding clients to local addresses when using
	  a SimpleResolver.  Also add the -b option to the dig program
	  to test this. (based on a patch by Bruno Dillenseger)

7/5/2005
	- Add support to ResolverConfig for using the undocumented
	  sun.net.dns.ResolverConfiguration class to determine the list
	  of nameservers and search path; make this the default when
	  it works (Yannick Meudal <yannick@meudal.net>).

6/16/2005
	- The inbound zone transfer code failed to treat port 0 as the
	  default as it claimed to. (Bill Kuker <wckits@rit.edu>)

6/15/2005
	- When doing a zone transfer with a SimpleResolver object, the
	  timeout was not properly obeyed.
	  (reported by Peter Bryant <peter@pingability.com>)

6/5/2005
	- Explictly register record type implementations instead of
	  using reflection; this should prevent hard to diagnose
	  problems resulting from partial compilation.

5/31/2005
	- 2.0.0 released.

5/16/2005
	- Fix the code to deal with TTL 0 data in the Cache.

5/15/2005
	- Add unit tests for many classes.  The unit tests are located
	  in the tests directory, which mirrors the org.xbill.DNS hierarchy.
	  (Matt Rutherford <rutherfo@cs.colorado.edu>)

5/7/2005
	- Fix several problems with empty names.
	  (Matt Rutherford <rutherfo@cs.colorado.edu>)  

4/23/2005
	- As per RFC 2181, the maximum allowed TTL value is 0x7FFFFFFF.
	  Change TTL.parseTTL() to reflect this by silently clamping
	  larger 32 bit values.

4/22/2005
	- Attempting to get the name/type/class/ttl of an empty RRset
	  throws an exception.

4/21/2005
	- Remove RRset.getSecurity()/.setSecurity().

4/16/2005
	- Change the internal representation of empty records (that is,